--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ h6 {
 }
 
 .banner-overlay {
-	background: linear-gradient(to bottom, rgba(171, 47, 82, 0.82) 0%, #ffaf53 100%);
+	background: linear-gradient(to bottom, rgba(108, 122, 137, 0.82) 0%, #55ff00 100%);
 	padding: 220px 0px 170px;
 }
 
