--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ html {
 }
 
 body {
-	color: #888888;
+	color: #ffffff;
+	background-color:#6C7A89;
 	font-size: 15px;
 	font-family: "Poppins", sans-serif;
 	height: 100%;
@@ -178,7 +179,7 @@ h6 {
 }
 
 .banner-overlay {
-	background: linear-gradient(to bottom, rgba(108, 122, 137, 0.82) 0%, #55ff00 100%);
+	background: linear-gradient(to bottom, rgba(85, 255, 0, 0.82) 0%, #6C7A89 100%);
 	padding: 220px 0px 170px;
 }
 
@@ -213,7 +214,7 @@ h6 {
 }
 
 .section-title h3 {
-	color: #ab2f52;
+	color: #55FF00;
 	text-transform: uppercase;
 	font-weight: 300;
 	margin-bottom: 22px;
@@ -278,7 +279,7 @@ h6 {
 }
 
 .sub-title-paragraph h5 {
-	color: #ffaf53;
+	color: #55FF00;
 }
 
 .sub-title-paragraph p {
@@ -289,7 +290,7 @@ h6 {
 }
 
 .anchor-btn {
-	background: #ffaf53;
+	background: #55FF00;
 	padding: 10px 20px;
 	color: #ffffff !important;
 	border-radius: 3px;
